# y_agents_plugins

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: agent-types.md  client-instantiation.md  comic-relief-agent.md  hello-world-agent.md  index.md  master-of-puppets-agent.md  moderator-agent.md  propaganda-agent.md  stress-attacker-agent.md
meta/: info.json  registry.json
plugins_exposed/: agent_types.json
scripts/: run_yweb_hello_world_integration.py
src/y_agents_plugins/: __init__.py  activity.py  agent_loader.py  agent_types.py  cli.py  config.py  database.py  executor.py  loop.py  models.py  runtime.py
src/y_agents_plugins/agents/: __init__.py  base.py  hello_world.py  moderator.py
src/y_agents_plugins/config/: __init__.py  settings.py
src/y_agents_plugins/core/: __init__.py  models.py
src/y_agents_plugins/db/: __init__.py  experiment.py
src/y_agents_plugins/llm/: __init__.py  langchain.py
src/y_agents_plugins/plugins/: __init__.py  base.py  comic_relief.py  hello_world.py  master_of_puppets.py  moderator.py  propaganda.py  stress_attacker.py
src/y_agents_plugins/runtime/: __init__.py  app.py  execution_logger.py  executor.py  loader.py  loop.py  manifest.py  scheduler.py
src/y_agents_plugins/stress_reward/: __init__.py  update_system.py
tests/: test_executor.py  test_loop.py  test_runtime.py
