[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y-agents-plugins"
version = "0.1.0"
description = "Modular YSocial agent plugins synchronized with a running experiment database."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Faker>=25.0",
  "sqlalchemy>=2.0",
  "langchain-core>=0.3",
  "langchain-openai>=0.3",
  "langchain-ollama>=0.2",
]

[project.optional-dependencies]
docs = ["mkdocs>=1.6"]

[project.scripts]
y-agents-plugins = "y_agents_plugins.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
